# cpp-base

./: .gitignore  .gitmodules  CMakeLists.txt  generate_doc_tests.py
src/: debug.hpp  snippets.hpp
